src/llvm/llvm/prep/Core.h

/**
 * Obtain the string name of a value.
 *
 * @see llvm::Value::getName()
 */
const char *LLVMGetValueName2(LLVMValueRef Val, size_t *Length);
/**
 * Set the string name of a value.
 *
 * @see llvm::Value::setName()
 */
void LLVMSetValueName2(LLVMValueRef Val, const char *Name, size_t NameLen);
/**
 * Convert value instances between types.
 *
 * Internally, an LLVMValueRef is "pinned" to a specific type. This
 * series of functions allows you to cast an instance to a specific
 * type.
 *
 * If the cast is not valid for the specified type, NULL is returned.
 *
 * @see llvm::dyn_cast_or_null<>
 */
LLVMValueRef LLVMIsAArgument(LLVMValueRef Val);
 LLVMValueRef LLVMIsABasicBlock(LLVMValueRef Val);
 LLVMValueRef LLVMIsAInlineAsm(LLVMValueRef Val);
 LLVMValueRef LLVMIsAUser(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstant(LLVMValueRef Val);
 LLVMValueRef LLVMIsABlockAddress(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantAggregateZero(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantArray(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantDataSequential(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantDataArray(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantDataVector(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantExpr(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantFP(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantInt(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantPointerNull(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantStruct(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantTokenNone(LLVMValueRef Val);
 LLVMValueRef LLVMIsAConstantVector(LLVMValueRef Val);
 LLVMValueRef LLVMIsAGlobalValue(LLVMValueRef Val);
 LLVMValueRef LLVMIsAGlobalAlias(LLVMValueRef Val);
 LLVMValueRef LLVMIsAGlobalIFunc(LLVMValueRef Val);
 LLVMValueRef LLVMIsAGlobalObject(LLVMValueRef Val);
 LLVMValueRef LLVMIsAFunction(LLVMValueRef Val);
 LLVMValueRef LLVMIsAGlobalVariable(LLVMValueRef Val);
 LLVMValueRef LLVMIsAUndefValue(LLVMValueRef Val);
 LLVMValueRef LLVMIsAInstruction(LLVMValueRef Val);
 LLVMValueRef LLVMIsAUnaryOperator(LLVMValueRef Val);
 LLVMValueRef LLVMIsABinaryOperator(LLVMValueRef Val);
 LLVMValueRef LLVMIsACallInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAIntrinsicInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsADbgInfoIntrinsic(LLVMValueRef Val);
 LLVMValueRef LLVMIsADbgVariableIntrinsic(LLVMValueRef Val);
 LLVMValueRef LLVMIsADbgDeclareInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsADbgLabelInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAMemIntrinsic(LLVMValueRef Val);
 LLVMValueRef LLVMIsAMemCpyInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAMemMoveInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAMemSetInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsACmpInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAFCmpInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAICmpInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAExtractElementInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAGetElementPtrInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAInsertElementInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAInsertValueInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsALandingPadInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAPHINode(LLVMValueRef Val);
 LLVMValueRef LLVMIsASelectInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAShuffleVectorInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAStoreInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsABranchInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAIndirectBrInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAInvokeInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAReturnInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsASwitchInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAUnreachableInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAResumeInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsACleanupReturnInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsACatchReturnInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsACatchSwitchInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsACallBrInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAFuncletPadInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsACatchPadInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsACleanupPadInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAUnaryInstruction(LLVMValueRef Val);
 LLVMValueRef LLVMIsAAllocaInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsACastInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAAddrSpaceCastInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsABitCastInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAFPExtInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAFPToSIInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAFPToUIInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAFPTruncInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAIntToPtrInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAPtrToIntInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsASExtInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsASIToFPInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsATruncInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAUIToFPInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAZExtInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAExtractValueInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsALoadInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAVAArgInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAFreezeInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAAtomicCmpXchgInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAAtomicRMWInst(LLVMValueRef Val);
 LLVMValueRef LLVMIsAFenceInst(LLVMValueRef Val);
LLVMValueRef LLVMIsAMDNode(LLVMValueRef Val);
LLVMValueRef LLVMIsAMDString(LLVMValueRef Val);
/** Deprecated: Use LLVMGetValueName2 instead. */
const char *LLVMGetValueName(LLVMValueRef Val);
/** Deprecated: Use LLVMSetValueName2 instead. */
void LLVMSetValueName(LLVMValueRef Val, const char *Name);
/**
 * @}
 */
/**
 * @defgroup LLVMCCoreValueUses Usage
 *
 * This module defines functions that allow you to inspect the uses of a
 * LLVMValueRef.
 *
 * It is possible to obtain an LLVMUseRef for any LLVMValueRef instance.
 * Each LLVMUseRef (which corresponds to a llvm::Use instance) holds a
 * llvm::User and llvm::Value.
 *
 * @{
 */
/**
 * Obtain the first use of a value.
 *
 * Uses are obtained in an iterator fashion. First, call this function
 * to obtain a reference to the first use. Then, call LLVMGetNextUse()
 * on that instance and all subsequently obtained instances until
 * LLVMGetNextUse() returns NULL.
 *
 * @see llvm::Value::use_begin()
 */
LLVMUseRef LLVMGetFirstUse(LLVMValueRef Val);
/**
 * Obtain the next use of a value.
 *
 * This effectively advances the iterator. It returns NULL if you are on
 * the final use and no more are available.
 */
LLVMUseRef LLVMGetNextUse(LLVMUseRef U);
/**
 * Obtain the user value for a user.
 *
 * The returned value corresponds to a llvm::User type.
 *
 * @see llvm::Use::getUser()
 */
LLVMValueRef LLVMGetUser(LLVMUseRef U);
/**
 * Obtain the value this use corresponds to.
 *
 * @see llvm::Use::get().
 */
LLVMValueRef LLVMGetUsedValue(LLVMUseRef U);